--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@supabase/supabase-js": "^2.45.0",
     "date-fns": "^3.6.0",
     "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "remove": "^0.1.5",
+    "sharp": "^0.33.4",
+    "supabase": "^1.187.10"
   },
   "devDependencies": {
     "@types/node": "^20",
