--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@heroicons/react": "^2.1.5",
     "@supabase/supabase-js": "^2.45.0",
     "date-fns": "^3.6.0",
-    "next": "14.2.5",
+    "next": "^14.2.7",
     "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
