--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^3.6.0",
     "next": "^14.2.7",
     "next-auth": "^5.0.0-beta.20",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-day-picker": "^9.0.8",
     "react-dom": "^18",
